# django_blog

./: Makefile  README.md  build.sh  create_super_user.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
django_blog/: forms.py  settings.py  urls.py  views.py
django_blog/categories/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
django_blog/categories/migrations/: 0001_initial.py
django_blog/posts/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
django_blog/posts/migrations/: 0001_initial.py  0002_alter_post_category.py
django_blog/static/css/: style.css
django_blog/tags/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
django_blog/tags/migrations/: 0001_initial.py
django_blog/templates/: base.html  delete_confirmation.html  home.html
django_blog/templates/categories/: category_form.html  category_list.html  index.html
django_blog/templates/posts/: index.html  post_detail.html  post_form.html  post_list.html
django_blog/templates/tags/: index.html  tag_form.html  tag_list.html
django_blog/templates/users/: create.html  index.html  login.html  registration.html
django_blog/users/: apps.py  forms.py  tests.py  urls.py  views.py
