[project]
name = "django-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "djlint>=1.36.4",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "isort>=6.0.1",
]

[tool.black]
line-length = 80
multi-line-output = 3
include-trailing-comma = true